--- a/text.yaml
+++ b/text.yaml
@@ -1,8 +1,8 @@
-name: 'test'
-on :
-  # [push]
-  schedule:
-    - cron: "* * * * *"
+# name: 'test'
+# on :
+#   # [push]
+#   schedule:
+#     - cron: "* * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
